pull movies from rest api using api key

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jflavio.layeredarch.android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MoviesApp"
         android:allowBackup="false"
