--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,10 @@ kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
 
 xcodeproj=iosApp/iosApp.xcodeproj
+
+kotlin.version=1.8.20
+compose.version=1.4.0
+agp.version=8.0.1
+
+org.jetbrains.compose.experimental.uikit.enabled=true
+kotlin.native.cacheKind=none
