--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ xcodeproj=iosApp/iosApp.xcodeproj
 kotlin.version=1.8.20
 compose.version=1.4.0
 agp.version=8.0.1
+buildKonfig.version=0.13.3
 
 org.jetbrains.compose.experimental.uikit.enabled=true
 kotlin.native.cacheKind=none
